<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apu5n.version_x.PujaList">

    <RelativeLayout
        android:id="@+id/RL_Adhik_mass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/PujaList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/color3"
            android:paddingBottom="10dp"
            android:paddingTop="6dp"
            android:text="@string/Puja_List"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RL_Links"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/RL_Adhik_mass"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="11dp"
            android:background="@color/colorPrimary"
            android:onClick="Home"
            android:text="@string/Home"
            android:textColor="@color/text"

            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Puja_List"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Home"
            android:layout_alignBottom="@+id/Home"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/Home"
            android:layout_toRightOf="@+id/Home"
            android:background="@color/colorPrimary"
            android:onClick="Puja_List"
            android:text="@string/Puja_List"
            android:textColor="@color/text"

            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Place_An_Order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Puja_List"
            android:layout_alignBottom="@+id/Puja_List"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/Puja_List"
            android:onClick="Place_An_Order"
            android:layout_toRightOf="@+id/Puja_List"
            android:background="@color/colorPrimary"
            android:text="@string/Place_An_Order"
            android:textColor="@color/text"

            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/RL_Adhik_mass"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/Bottam_Line"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/color2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:singleLine="false"

            android:soundEffectsEnabled="false"
            android:text="@string/Puja_List_Bottam_Line"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="22sp" />


        <ScrollView
            android:id="@+id/SV_Puja_List"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Bottam_Line"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp">


            <RelativeLayout
                android:id="@+id/RL_SC_Puja_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <RelativeLayout
                    android:id="@+id/RL_Puja_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/BT_Puja_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@color/text"
                        android:paddingLeft="15dp"
                        android:paddingRight="5dp"
                        android:text="@string/Adik_Mass"
                        android:onClick="Adhik_Mass"
                        android:textColor="@color/text2"

                        android:textSize="17sp"
                        android:textStyle="normal|bold" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RL_Puja_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp">

                    <Button
                        android:id="@+id/BT_Puja_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@color/text"
                        android:paddingLeft="15dp"
                        android:paddingRight="5dp"
                        android:text="@string/Diwali_Puja"
                        android:textColor="@color/text2"

                        android:textSize="17sp"
                        android:textStyle="normal|bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="100dp">

                    <Button
                        android:id="@+id/BT_Puja_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/text"
                        android:paddingLeft="15dp"
                        android:paddingRight="5dp"
                        android:text="@string/Satyanarayan"
                        android:textColor="@color/text2"

                        android:textSize="17sp"
                        android:textStyle="normal|bold" />
                </RelativeLayout>

            </RelativeLayout>

        </ScrollView>


    </RelativeLayout>

</RelativeLayout>
